# PyWordToPDF

./: .gitignore  .pre-commit-config.yaml  Converter WORD para PDF.py  README.md  bandit_results.html  checkword.py  convertdocxtopdf.py  main.py  pyproject.toml  requeriments.txt  requirements.txt
Scripts/: ui_uploadfiles.py
