[tool.poetry]
name = "pywordtopdf"
version = "0.0.1"
description = ""
authors = ["Robotz213 <nicholas@robotz.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
PyQt5 = "5.15.11"
PySide2 = "5.15.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black" # Garante compatibilidade com Black
line_length = 88  # O mesmo limite de linha do Black

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
